Add static colour behavior to 0728

--- a/host-to-device/07/28/0728.md
+++ b/host-to-device/07/28/0728.md
@@ -2,7 +2,7 @@
 
 Must be preceded by a stream of [`7f` packets](https://github.com/mattanger/ckb-next/wiki/Corsair-Protocol#7f-nn-ss-00---write-multiple-packet-stream), in the sequence of:
 
-`C` is the colour type, `N` is the number of packets (not bytes!) for this colour, `F` is a finish marker - `1` if not finished, `2` if finished.
+`C` is the colour type, `N` is the number of packets (not bytes!) for this colour, `F` is a finish marker - `1` if not finished, `2` if finished. If setting the keyboard to a single static colour, for example blue, it is not necessary to send packets for red and green (this is actually how the corsair protocol behaves) and F is set to 2; that said, sending subsequent red and green packets would result in layering regardless. Below is an example of a layered RGB colour change.
 
 - Red values per key (one byte of colour) in 3 `7f` packets.
 - `07 28 01 03 01` - `C` for red is `1`, `0N` is number of packets for this colour - `3`, `0F` is `1` - packets are not finished.
