Keyboard layout theory

--- a/host-to-device/0e/01/0e01.md
+++ b/host-to-device/0e/01/0e01.md
@@ -32,7 +32,7 @@ Continuation from a keyboard:
 c0 [??? - keyboard identification byte?]
 ff [???]
 40 [???]
-00 [???]
+00 [??? - keyboard layout identifier? 00 is US English, 01 is UK English.]
 03 [???]
 00 [???]
 00 [???]
