Update keyboard theory

--- a/host-to-device/0e/01/0e01.md
+++ b/host-to-device/0e/01/0e01.md
@@ -32,7 +32,9 @@ Continuation from a keyboard:
 c0 [??? - keyboard identification byte?]
 ff [???]
 40 [???]
-00 [??? - keyboard layout identifier? 00 is US English, 01 is UK English.]
+00 [??? - keyboard physical layout identifier?
+    00 is ANSI (America), 01 is ISO (Europe), 02 is ABNT (Brazil) and
+    03 is JIS (Japan).]
 03 [???]
 00 [???]
 00 [???]
@@ -40,7 +42,8 @@ ff [???]
 02 [??? - varies between keyboards]
 04 [??? - varies between keyboards]
 01 [??? - varies between keyboards]
-02 [??? - varies between keyboards]
+02 [??? - keyboard virtual layout identifier?
+    This depends on the physical layout, but we're gathering more info.]
 ```
 
 Continuation from a mouse:
